# AoC_2023

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  main.cpp
.github/workflows/: convoluted_build_check.yml  convoluted_merge_attempt.yml
cmake/: clang_tidy.cmake  cppcheck.cmake  formatting.cmake  project_settings.cmake
conan/: conanfile.py  profile.txt
src/: CMakeLists.txt
src/Hello/: Hello.cpp  Hello.hpp
src/Utils/: CMakeLists.txt  Utils.hpp  Utils.pc.in
src/Utils/GetUserName/: GetUserName.cpp  GetUserName.hpp
test/: CMakeLists.txt
test/src/: test_Hello.cpp
