configure_file(Utils.pc.in Utils.pc @ONLY)

# Add sources as needed
set(UTILS_LIB_SOURCES
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Utils.hpp>"
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/GetUserName/GetUserName.hpp>"
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/GetUserName/GetUserName.cpp>"
)

add_library(Utils SHARED ${UTILS_LIB_SOURCES})
set_target_properties(
	Utils
	PROPERTIES
	PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Utils.hpp"
)

set(FILES_TO_CPP_CHECK ${FILES_TO_CPP_CHECK} ${UTILS_LIB_SOURCES} PARENT_SCOPE)
set(FILES_TO_TIDY ${FILES_TO_TIDY} ${UTILS_LIB_SOURCES} PARENT_SCOPE)
set(FILES_TO_FORMAT ${FILES_TO_FORMAT} ${UTILS_LIB_SOURCES} PARENT_SCOPE)

target_include_directories(
	Utils INTERFACE
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>"
	"$<INSTALL_INTERFACE:lib/>"
)

install(
	TARGETS Utils
	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
	PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
)

install(
	FILES "${CMAKE_BINARY_DIR}/src/Utils/Utils.pc"
	DESTINATION "${CMAKE_INSTALL_PREFIX}/config"
)